--- a/Template_MVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     @Html.ActionLink("Users", "Maintain", "Users", new { area = "Admin" }, new { @class = "nav-link text-white" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Groups", "Index", "Groups", new { area = "Admin" }, new { @class = "nav-link text-white" })
+                    @Html.ActionLink("Groups", "Maintain", "Groups", new { area = "Admin" }, new { @class = "nav-link text-white" })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Functions", "Index", "Functions", new { area = "Admin" }, new { @class = "nav-link text-white" })
