add login 3 times fail logic

--- a/Template_MVC/Areas/Admin/Views/Account/Login.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Account/Login.cshtml
@@ -54,6 +54,7 @@
         } else {
             // failure                    
             $("#lbl_errMsg").text('@Resources.Resource.ErrorCaptcha');
+            $('input[name="loginCaptcha"]').val('');
             alert('@Resources.Resource.ErrorCaptcha');
         }
     });
