--- a/Template_MVC/Areas/Admin/Views/Users/Maintain.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Users/Maintain.cshtml
@@ -41,8 +41,8 @@
                     <td>{{ user.email }}</td>
                     <td>{{ user.is_active ? 'Yes' : 'No' }}</td>
                     <td>{{ user.is_admin ? 'Yes' : 'No' }}</td>
-                    <td>{{ user.lastlogin }}</td>
-                    <td>{{ user.cdt }}</td>
+                    <td>{{ user.lastlogin | formatDateTime }}</td>
+                    <td>{{ user.cdt | formatDateTime }}</td>
                     <td>
                         <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#edit-user-modal" v-on:click="EditUsers(user)">Edit</button>
                         <button class="btn btn-danger btn-sm" v-on:click="DeleteUsers(user)">Delete</button>
@@ -99,18 +99,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit User</h5>
+                    <h5 class="modal-title">Edit {{selectedUser.username}} / {{selectedUser.userno}}</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label for="edit-username">Username:</label>
-                        <input type="text" class="form-control" id="edit-username" v-model="selectedUser.username">
-                    </div>
-                    <div class="form-group">
-                        <label for="edit-userno">User No:</label>
-                        <input type="text" class="form-control" id="edit-userno" v-model="selectedUser.userno">
-                    </div>
                     <div class="form-group">
                         <label for="edit-userpsw">Password:</label>
                         <input type="password" class="form-control" id="edit-userpsw" v-model="selectedUser.password" :disabled="!changePsw">
@@ -151,7 +143,27 @@
             users: [],
             selectedUser: {},
             changePsw: false,
-            searchText: $("#input_Search").val()
+            searchText: $("#input_Search").val(),
+            insertUser: {
+                username: "",
+                userno: "",
+                password: "123",
+                is_active: true,
+                is_admin: true,
+                email: "aaa@darfon.com.tw"
+            }
+        },
+        filters: {
+            formatDateTime: function (value) {
+                const date = new Date(value);
+                const year = date.getFullYear();
+                const month = ('0' + (date.getMonth() + 1)).slice(-2);
+                const day = ('0' + date.getDate()).slice(-2);
+                const hours = ('0' + date.getHours()).slice(-2);
+                const minutes = ('0' + date.getMinutes()).slice(-2);
+                const seconds = ('0' + date.getSeconds()).slice(-2);
+                return `${year}/${month}/${day} ${hours}:${minutes}:${seconds}`;
+            }
         },
         created() {
             // alert('Hello');
@@ -165,20 +177,21 @@
                 axios.post('/Admin/Users/QueryUser', {
                     input: search
                 })
-                    .then(response => {
-                        this.users = response.data;
-                        if (response.data.length == 0) {
-                            alert("User: " + search + " not found");
-                        }
-                    })
-                    .catch(error => {
-                        console.log(error);
-                    });
+                .then(response => {
+                    this.users = response.data;
+                    if (response.data.length == 0) {
+                        alert("User: " + search + " not found");
+                    }
+                })
+                .catch(error => {
+                    console.log(error);
+                });
             },
             EditUsers(user) {
                 // Set the selected user.
                 this.changePsw = false;
                 this.selectedUser = user;
+                console.log(this.selectedUser);
             },
             UpdateUsers(input) {
                 if (confirm('Are you sure update user ' + this.selectedUser.username + '?')) {
@@ -191,18 +204,18 @@
                         input: inputUser,
                         newPsw: inputPsw
                     })
-                        .then(response => {
-                            console.log(response);
-                            if (response.data.isSuccess) {
-                                alert('User Update !!');
-                                location.reload();
-                            } else {
-                                alert(response.data.Message);
-                            }
-                        })
-                        .catch(error => {
-                            console.log(error);
-                        });
+                    .then(response => {
+                        console.log(response);
+                        if (response.data.isSuccess) {
+                            alert('User Update !!');
+                            location.reload();
+                        } else {
+                            alert(response.data.Message);
+                        }
+                    })
+                    .catch(error => {
+                        console.log(error);
+                    });
                 } else {
                     // 取消按鈕被點擊
                     console.log('User clicked Cancel');
@@ -214,18 +227,18 @@
                     axios.post('/Admin/Users/DeleteUser', {
                         userId: user.user_id
                     })
-                        .then(response => {
-                            console.log(response);
-                            if (response.data.isSuccess) {
-                                alert('User ' + user.username + ' deleted !!');
-                                location.reload();
-                            } else {
-                                alert(response.data.Message);
-                            }
-                        })
-                        .catch(error => {
-                            console.log(error);
-                        });
+                    .then(response => {
+                        console.log(response);
+                        if (response.data.isSuccess) {
+                            alert('User ' + user.username + ' deleted !!');
+                            location.reload();
+                        } else {
+                            alert(response.data.Message);
+                        }
+                    })
+                    .catch(error => {
+                        console.log(error);
+                    });
                 }
                 else {
                     // 取消按鈕被點擊
@@ -233,10 +246,34 @@
                 }
             },
             AddUsers() {
-                alert('add user');
+                
             },
             InsertUsers() {
-                alert('call controller');
+                
+                this.insertUser.username = $("#add-username").val();
+                this.insertUser.userno = $("#add-userno").val();
+                this.insertUser.password = $("#add-userpsw").val();
+                this.insertUser.email = $("#add-email").val();
+                this.insertUser.is_active = $("#add-active")[0].checked;
+                this.insertUser.is_admin = $("#add-admin")[0].checked;
+                
+                console.log(this.insertUser);
+
+                axios.post('/Admin/Users/AdminAddUser', {
+                    input: this.insertUser
+                })
+                .then(response => {
+                    console.log(response);
+                    if (response.data.isSuccess) {
+                        alert('Add user ' + this.insertUser.username + ' success !!');
+                        location.reload();
+                    } else {
+                        alert(response.data.Message);
+                    }
+                })
+                .catch(error => {
+                    console.log(error);
+                });
             }
         }
     });
