--- a/Template_MVC/Content/Site.css
+++ b/Template_MVC/Content/Site.css
@@ -76,3 +76,8 @@ footer {
 a {
     text-decoration: none;
 }
+
+/* table tr lightbar*/
+tbody>tr:hover {
+    background-color: lightgoldenrodyellow;
+}
