--- a/Template_MVC/Views/Shared/_Layout.cshtml
+++ b/Template_MVC/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
             </li>*@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Functions
+                                @Resources.Resource.Function
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href='/help'>API</a></li>
