Finish 3 time login error block; Add Admin/config maintain;

--- a/Template_MVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                 <li class="nav-item">
                     @Html.ActionLink("Functions", "Index", "Functions", new { area = "Admin" }, new { @class = "nav-link text-white" })
                 </li>
+                <li class="nav-item">
+                    @Html.ActionLink("Config", "Maintain", "Ini", new { area = "Admin" }, new { @class = "nav-link text-white" })
+                </li>
             </ul>
             @*<hr>
         <div class="dropdown">
