--- a/Template_MVC/Areas/Admin/Views/Users/Maintain.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Users/Maintain.cshtml
@@ -9,7 +9,7 @@
         <hr>
         <div class="row mb-3">
             <div class="col-4">
-                <input id="input_Search" type="text" class="form-control" placeholder="Search">
+                <input id="input_Search" type="text" class="form-control" placeholder="Username/ User No/ Email">
             </div>
             <div class="col-2">
                 <button class="btn btn-primary" v-on:click="fetchUsers()">Search</button>
