change config to config folder; change url to related path

--- a/Template_MVC/Views/Error/InternalServer.cshtml
+++ b/Template_MVC/Views/Error/InternalServer.cshtml
@@ -4,11 +4,11 @@
 }
 <style>
     body {
-        background-image: url('../../Images/dfbg.jpg');        
+        background-image: url('@Url.Content("~/Images/dfbg.jpg")');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        height: 100vh;        
+        height: 100vh;
     }
     body::before {
         content: "";
