--- a/Template_MVC/Views/Error/NotFound.cshtml
+++ b/Template_MVC/Views/Error/NotFound.cshtml
@@ -5,7 +5,7 @@
 
 <style>
     body {
-        background-image: url('../../Images/dfbg.jpg');
+        background-image: url('@Url.Content("~/Images/dfbg.jpg")');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
